--- a/frontend/Game.css
+++ b/frontend/Game.css
@@ -1,19 +1,20 @@
+body{
+    background-color: lightgreen;
+}
 .Game_container{
+    background-color: white;
+    border-radius: 25px;
     margin-top: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-style: solid;
-    border-width: 5px;
-    width: 50%;
+    width: 70%;
     height: 50%;
 }
 .Game_settings{
     margin-top: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-style: solid;
-    border-width: 3px;
-    width: 50%;
+    width: 80%;
     height: 50%;
 }
 .Game_data{
@@ -22,7 +23,7 @@
     padding-bottom: 10px;
     border-style: solid;
     border-width: 3px;
-    width: 50%;
+    width: 80%;
     height: 50%;
 }
 .Game_question{
@@ -31,14 +32,16 @@
     border-style: solid;
     border-width: 3px;
     border-top: none;
-    width: 50%;
+    width: 80%;
     height: 50%;
 }
 .Game_conferm{
+    border-radius: 25px;
+    background-color: grey;
     margin-top: 5px;
     border-style: solid;
     border-width: 3px;
-    border-color: black;
-    background-color: white;
+    border-color: grey;
+    color:white;
     font-weight: bold;
 }
