--- a/frontend/components/Progress.css
+++ b/frontend/components/Progress.css
@@ -2,7 +2,8 @@ FontAwesomeIcon {
     display: inline;
   }
   .ProgressBox{
-    border-style: solid;
+    border-top-style: solid;
+    border-bottom-style: solid;
     border-width: 3px;
     width: 50%;
     padding-top: 5px;
