--- a/frontend/components/SingleSelect.css
+++ b/frontend/components/SingleSelect.css
@@ -5,13 +5,14 @@
     padding-left: 5px
   }
   .SingleSelectBox{
-    border-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
     border-width: 3px;
     width: 75%;
     padding-bottom: 5px;
   }
   .complete{
-    background-color: green;
+    background-color: turquoise;
   }
   .progressStatus{
     border-style: solid;
